# pufo-twitter-bot

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.rst  README.md  README.rst  crontab  first-names-test.json  generated_pairs.json  noxfile.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
data/: Vornamen_Koeln_2014.csv  Vornamen_Koeln_2015.csv  Vornamen_Koeln_2016.csv  Vornamen_Koeln_2017.csv  Vornamen_Koeln_2019.csv  Vornamen_Koeln_2020.csv  first-names-merged.csv  first-names.json  first-names.pkl  last-names.txt  surnames.txt
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
examples/: generate_books.py
src/pufo_twitter_bot/: __init__.py  __main__.py  chatgpt_generator.py  config.py  models.py
src/pufo_twitter_bot/authors/: __init__.py  opendatanames.py  randomnames.py
src/pufo_twitter_bot/books/: __init__.py  chatgpt_generator.py  randombuch.py
src/pufo_twitter_bot/bot/: __init__.py  tweets.py  twitter.py
src/pufo_twitter_bot/data/: Vornamen_Koeln_2010.csv  Vornamen_Koeln_2011.csv  Vornamen_Koeln_2012.csv  Vornamen_Koeln_2013.csv
tests/: __init__.py  conftest.py  test_authors.py  test_books.py  test_bot.py  test_main.py  test_models.py
tests/data/: first-names-merged.csv  first-names-test.json  last-names-test.txt  last-names.txt  tweet-test.txt  vornamen-test.csv
