[tool.poetry]
name = "pufo-twitter-bot"
version = "0.3.0"
description = "Pufo Twitter Bot"
authors = ["Marius Theiss <justusbersten@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mjt91/pufo-twitter-bot"
repository = "https://github.com/mjt91/pufo-twitter-bot"
documentation = "https://pufo-twitter-bot.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/mjt91/pufo-twitter-bot/releases"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0.0"
click = ">=7.0"
requests = ">=2.25.1"
marshmallow = ">=3.11.1"
desert = ">=2020.11.18"
beautifulsoup4 = ">=4.9.3"
tweepy = ">=3.10.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
pytest-mock = ">=3.5.1"
coverage = {extras = ["toml"], version = ">=5.4"}
safety = ">=1.10.3"
mypy = ">=0.812"
typeguard = ">=2.11.1"
xdoctest = {extras = ["colors"], version = ">=1.1.0"}
sphinx = ">=3.5.4"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.17.0"
flake8 = ">=4.0.1"
black = ">=21.10b0"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=22.9.11"
flake8-docstrings = ">=1.5.0"
flake8-rst-docstrings = ">=0.2.5"
pep8-naming = ">=0.13.1"
darglint = ">=1.7.0"
reorder-python-imports = ">=2.6.0"
pre-commit-hooks = ">=4.1.0"
sphinx-rtd-theme = ">=0.5.1"
sphinx-click = ">=2.6.0"
Pygments = ">=2.8.1"

[tool.poetry.scripts]
pufo-twitter-bot = "pufo_twitter_bot.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pufo_twitter_bot"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
