[project]
name = "pufo-twitter-bot"
version = "0.4.0"
description = "Pufo Twitter Bot"
authors = [{ name = "Marius Theiss", email = "justusbersten@gmail.com" }]
requires-python = ">=3.8,<4.0.0"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "click>=7.0",
    "requests>=2.25.1",
    "marshmallow>=3.11.1",
    "desert>=2020.11.18",
    "beautifulsoup4>=4.9.3",
    "tweepy>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/mjt91/pufo-twitter-bot"
Repository = "https://github.com/mjt91/pufo-twitter-bot"
Documentation = "https://pufo-twitter-bot.readthedocs.io"
Changelog = "https://github.com/mjt91/pufo-twitter-bot/releases"

[project.scripts]
pufo-twitter-bot = "pufo_twitter_bot.__main__:main"

[dependency-groups]
dev = [
    "pytest>=6.2.5",
    "pytest-mock>=3.5.1",
    "coverage[toml]>=5.4",
    "safety>=1.10.3",
    "mypy>=0.812",
    "typeguard>=2.11.1",
    "xdoctest[colors]>=1.1.0",
    "sphinx>=3.5.4",
    "sphinx-autobuild>=2021.3.14",
    "pre-commit>=2.17.0",
    "flake8>=4.0.1",
    "black>=21.10b0",
    "flake8-bugbear>=22.9.11",
    "flake8-docstrings>=1.5.0",
    "flake8-rst-docstrings>=0.2.5",
    "pep8-naming>=0.13.1",
    "darglint>=1.7.0",
    "reorder-python-imports>=2.6.0",
    "pre-commit-hooks>=4.1.0",
    "sphinx-rtd-theme>=0.5.1",
    "sphinx-click>=2.6.0",
    "Pygments>=2.8.1",
    "types-requests>=2.32.0,<3",
    "isort>=5.13.2,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pufo_twitter_bot"]

[tool.coverage.report]
show_missing = true
